[package]
name = "pester-log"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-minimize", "window-unminimize", "window-unmaximize", "window-maximize", "window-create", "window-close", "window-center", "window-set-position", "window-set-size", "window-start-dragging", "window-hide", "window-show", "window-set-resizable", "window-set-focus", "window-set-always-on-top", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winit = "0.24.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
